<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.estatistica.EstatisticasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/estatisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/estatisticas"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/estatisticas" />

    <TextView
        android:id="@+id/partidas_disputadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/jogos"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estatisticas"
        tools:text="@string/jogos" />

    <TextView
        android:id="@+id/text_jogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/partidas_disputadas"
        app:layout_constraintStart_toEndOf="@+id/partidas_disputadas"
        tools:text="8" />

    <TextView
        android:id="@+id/vitorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/vitorias"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partidas_disputadas"
        tools:text="@string/vitorias" />

    <TextView
        android:id="@+id/text_vitorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/vitorias"
        app:layout_constraintStart_toEndOf="@+id/vitorias"
        tools:text="8" />

    <TextView
        android:id="@+id/empates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/empates"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitorias"
        tools:text="@string/empates" />

    <TextView
        android:id="@+id/text_empates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/empates"
        app:layout_constraintStart_toEndOf="@+id/empates"
        tools:text="8"/>

    <TextView
        android:id="@+id/derrotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/derrotas"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empates"
        tools:text="@string/derrotas" />

    <TextView
        android:id="@+id/text_derrotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/derrotas"
        app:layout_constraintStart_toEndOf="@+id/derrotas"
        tools:text="8"/>

    <TextView
        android:id="@+id/aproveitamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/aproveitamento"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/derrotas"
        tools:text="@string/aproveitamento" />

    <TextView
        android:id="@+id/text_aproveitamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/aproveitamento"
        app:layout_constraintStart_toEndOf="@+id/aproveitamento"
        tools:text="8" />

        <TextView
            android:id="@+id/porcentagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_aproveitamento"
            app:layout_constraintStart_toEndOf="@+id/text_aproveitamento"
            android:text="%" />

    <TextView
        android:id="@+id/gol_feito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/gols_marcados"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aproveitamento"
        tools:text="@string/gols_marcados" />

    <TextView
        android:id="@+id/text_gols_feitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/gol_feito"
        app:layout_constraintStart_toEndOf="@+id/gol_feito"
        tools:text="8"/>

    <TextView
        android:id="@+id/gol_sofrido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/gols_sofridos"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gol_feito"
        tools:text="@string/gols_sofridos" />

    <TextView
        android:id="@+id/text_gols_sofridos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/gol_sofrido"
        app:layout_constraintStart_toEndOf="@+id/gol_sofrido"
        tools:text="8" />

    <TextView
        android:id="@+id/saldo_gols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/saldo_de_gols"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gol_sofrido"
        tools:text="@string/saldo_de_gols" />

    <TextView
        android:id="@+id/text_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/saldo_gols"
        app:layout_constraintStart_toEndOf="@+id/saldo_gols"
        tools:text="8" />

    <TextView
        android:id="@+id/gols_jogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="19dp"
        android:gravity="center"
        android:text="@string/gols_pjogo"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saldo_gols"
        tools:text="@string/gols_pjogo" />

    <TextView
        android:id="@+id/text_gols_feitos_pjogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/gols_jogo"
        app:layout_constraintStart_toEndOf="@+id/gols_jogo"
        tools:text="8"/>

        <TextView
            android:id="@+id/gols_sofridos_jogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/gols_contra_pjogo"
            android:textSize="22sp"
            android:layout_marginBottom="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gols_jogo"
            tools:text="@string/gols_contra_pjogo" />

    <TextView
        android:id="@+id/text_gols_sofridos_pjogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/gols_sofridos_jogo"
        app:layout_constraintStart_toEndOf="@+id/gols_sofridos_jogo"
        tools:text="8"/>


</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
