<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jogadores.JogadorAlterarActivity">

    <TextView
        android:id="@+id/tvNomeAlterarJogadores"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/nome_cadastro_jogador"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/etNomeAlterarJogadores"
        android:background="@drawable/fundo_edit_text"
        android:layout_width="300dp"
        android:layout_marginTop="8dp"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvNomeAlterarJogadores"
        app:layout_constraintStart_toStartOf="@+id/tvNomeAlterarJogadores" />

    <TextView
        android:id="@+id/tvOverallAlterarJogador"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/overall_cadastro_jogador"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etNomeAlterarJogadores"
        app:layout_constraintStart_toStartOf="@+id/etNomeAlterarJogadores" />

    <EditText
        android:id="@+id/etOverallAlterarJogadores"
        android:background="@drawable/fundo_edit_text"
        android:layout_width="300dp"
        android:layout_marginTop="8dp"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:layout_height="50dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tvOverallAlterarJogador"
        app:layout_constraintStart_toStartOf="@+id/tvNomeAlterarJogadores"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btJogadorAltera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:padding="16dp"
        android:text="@string/salvar_botao"
        android:textSize="16sp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOverallAlterarJogadores" />

    <Button
        android:id="@+id/btCancelarAlterarJogador"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:padding="16dp"
        android:text="@string/cancelar_botao"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btJogadorAltera" />

</androidx.constraintlayout.widget.ConstraintLayout>
