<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jogos.AlteraJogoActivity">

    <TextView
        android:id="@+id/tvPlacar"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="Placar:"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvMeuTime"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/meu_time"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/tvPlacar"
        app:layout_constraintStart_toStartOf="@+id/tvPlacar" />

    <TextView
        android:id="@+id/tvX"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="X"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeAdv"
        app:layout_constraintStart_toEndOf="@id/tvMeuTime"
        app:layout_constraintTop_toTopOf="@id/tvMeuTime" />

    <EditText
        android:id="@+id/etMeuTAltera"
        android:layout_width="40dp"
        android:layout_marginTop="8dp"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:layout_height="50dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tvMeuTime"
        app:layout_constraintStart_toStartOf="@+id/tvPlacar"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvTimeAdv"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/oponente"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/tvPlacar"
        app:layout_constraintEnd_toEndOf="@+id/tvPlacar" />

    <EditText
        android:id="@+id/etMeuAdvAltera"
        android:layout_width="40dp"
        android:layout_marginTop="8dp"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:layout_height="50dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tvTimeAdv"
        app:layout_constraintStart_toStartOf="@+id/tvTimeAdv"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btJogoAltera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:text="@string/salvar_botao"
        android:textSize="16sp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMeuTAltera" />

    <Button
        android:id="@+id/btCancelarAlterarJogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:text="@string/cancelar_botao"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btJogoAltera" />

</androidx.constraintlayout.widget.ConstraintLayout>